# parsermouth-web

./: README.md  app.py  contacts.dump  intruder.dump  log.lammps  log2.lammps  pyproject.toml  thermo_1.parquet  ui.py
.github/workflows/: deploy.yaml
docs/: index.html
